# cerebra_atlas_python

./: .gitignore  0.0-initial-transforms.ipynb  0.1-colors.ipynb  0.1-coordinate-frames.ipynb  0.4-mniAverage-src-intergration.ipynb  2.0-example.ipynb  3.0-tests.ipynb  CerebrA.py  LICENSE  MANIFEST.in  README.md  build_install.sh  clean.sh  pyproject.toml  requirements.txt  test.py  utils.py
cerebra_atlas_python/: CerebrA.py  MNIAverage.py  __init__.py  _logging.py  cache.py  cerebra.py  cerebra_base.py  cerebra_mne.py  config.ini  config.py  fig_config.py  icbm152_bem.py  logging.py  mni_average.py  mniaverage.py  plotting.py  plotting_3d.py  source_space.py  transforms.py  utils.py
dev/: dev.ipynb
docs/: .gitignore  cerebra.rst  conf.py  examples.rst  getting_started.rst  index.rst  requirements.txt
examples/: 2d_plot.ipynb  2d_plot.py  3d_plot.py  3d_plot_forward.py  including_a_new_montage.ipynb  plot_forward_3d.py  region_data.py
notebooks/: 0.0-generate-cerebra-data.ipynb  0.0-initial-transforms.ipynb  0.01-volumes.ipynb  0.04-sources-per-region-exploration.ipynb  0.05-alignment.ipynb  0.1-initial-transforms.ipynb  0.1-visualize-cerebra-data.ipynb  0.2-colors.ipynb  0.2-coordinate-frame-transforms.ipynb  0.2-discrete-src-space.ipynb  0.2-mne-src-space-alignment.ipynb  0.3-colors.ipynb  0.3-source-space-gen.ipynb  0.4-corregistration-example.ipynb  0.4-mniAverage-src-intergration.ipynb  0.4-sources-per-region-exploration.ipynb  2.0-example.ipynb  2d_example.ipynb  3d_example.ipynb  99.0-cerebra-vol-src-labeling.ipynb  99.2-MNIAverage.ipynb  dev.ipynb
old_notebooks/: text.csv  utils.ipynb
scripts/: build_install.sh  clean.sh  generate_docs.sh  run_tests.sh
tests/: requirements.txt  test_base.py  test_main.py
thesis/: region_metadata.ipynb
(+97 files in other folders)
